--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,7 +5,8 @@
 // Variables
 @import 'variables';
 @import './page/start';
-
+@import './page/quetions';
+@import './abstructs/mixins';
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
