結果ページ実装

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,6 +6,7 @@
 @import 'variables';
 @import './page/start';
 @import './page/quetions';
+@import './page/_result';
 @import './abstructs/mixins';
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
