--- a/resources/sass/page/_start.scss
+++ b/resources/sass/page/_start.scss
@@ -61,6 +61,9 @@ $main-color: #81D1D5;
                 cursor: pointer;
                 margin-top: 12px;
                 height: 60px;
+               display: flex;
+               justify-content: center;
+               align-items: center;
                 &--start {
                     grid-row: 1/2;
                     grid-column: 1/3;
