--- a/resources/sass/page/_quetions.scss
+++ b/resources/sass/page/_quetions.scss
@@ -20,6 +20,10 @@
         display: inline-block;
         margin-bottom: 12px;
     }
+    &__content {
+        width: 400px;
+        
+    }
 }
 
 .answers {
