--- a/resources/sass/page/_result.scss
+++ b/resources/sass/page/_result.scss
@@ -6,18 +6,33 @@
     .box {
         border: 1px solid rgb(232, 232, 232);
         border-radius: 8px;
-        min-width: 400px;
+        width: 400px;
         padding: 20px;
-        margin: 30px;
+        margin: 18px;
         display: flex;
+        .keyword {
+            font-size: 32px;
+            font-weight: 600;
+        }
+        .keywords {
+            list-style: none;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+        }
         &--center {
             justify-content: center;
         }
         &--column {
             flex-direction: column;
         }
+        h2 {
+            font-size: 18px;
+            font-weight: 600;
+        }
         p {
             font-size: 12px;
+            margin: 0;
         }
         .detail {
             font-size: 18px;
@@ -25,5 +40,12 @@
         .typeName {
             font-size: 30px;
         }
+        .typeComment {
+            color: rgb(102, 101, 101);
+        }
+    }
+    .links {
+        padding: 20px;
+        color: rgb(162, 162, 162);
     }
 }
