--- a/public/css/app.css
+++ b/public/css/app.css
@@ -234,6 +234,94 @@
   color: #a2a2a2;
 }
 
+h1 {
+  font-size: 20px;
+}
+
+.login {
+  background-color: #81D1D5;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+}
+
+.login h1 {
+  font-size: 22px;
+  text-align: center;
+  margin: 24px 0;
+}
+
+.login h2 {
+  font-size: 18px;
+  font-weight: 500;
+  margin-bottom: 12px;
+}
+
+.login .content {
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  height: 600px;
+  width: 400px;
+  border-radius: 12px;
+  padding: 32px;
+}
+
+.login .content .snsButtons {
+  margin-bottom: 24px;
+}
+
+.login .content .snsButton {
+  width: 300px;
+  height: 40px;
+  text-align: center;
+  color: white;
+  border-radius: 8px;
+  line-height: 40px;
+  margin: 0 auto 12px;
+}
+
+.login .content .snsButton--google {
+  background-color: #4285F4;
+}
+
+.login .content .snsButton--twitter {
+  background-color: #1DA1F2;
+}
+
+.login .content .snsButton--line {
+  background-color: #00B900;
+}
+
+.login .content .mail {
+  margin: 0 auto;
+}
+
+.login .content .mail form {
+  display: flex;
+  flex-direction: column;
+}
+
+.login .content .mail input {
+  border: 1px solid #c9c9c9;
+  padding: 8px;
+  border-radius: 8px;
+  width: 300px;
+  margin: 0 auto 12px;
+}
+
+.login .content .mail button {
+  background-color: #81D1D5;
+  color: #fff;
+  height: 40px;
+  border-radius: 40px;
+  width: 300px;
+  margin: 0 auto;
+}
+
 /*!
  * Bootstrap v4.6.0 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
